--- a/codeup-design-project.html
+++ b/codeup-design-project.html
@@ -6,96 +6,185 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet"href="codeup-design-project.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="codeup-design-project.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
 </head>
 
-<div class="card">
-    <div class="card-body">
-<body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12" style="background-color:#E6E6E6;">
-            <h2 class="anton"> codeup design</h2>
+
+
+
+
+<!--<div class="container"> -->
+<!-- <div class="row">-->
+<!--     <div class="button-container">-->
+
+<!--         <div class="row row-cols-2">-->
+<!--             <div class="col"><button type="button" class="circle color-red anton text-white px btn">Design</button></div>-->
+<!--             <div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div>-->
+<!--             <div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div>-->
+<!--             <div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div>-->
+<!--         </div>-->
+<!--     </div>-->
+
+
+<!--         <div class="container">-->
+<!--             <div class="row">-->
+<!--                 <div class="button-container">-->
+
+<!--  <div class="bg-info col-xs-4"> -->
+<!--       <div class="col"><button type="button" class="circle color-red anton text-white px btn">Design</button></div>-->
+<!--  </div> -->
+<!--     <div class="bg-primary col-xs-8"> -->
+<!--        <div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div>-->
+<!--     </div>   </div> </div> -->
+
+<!--<div class="container"> -->
+<!-- <div class="row"> -->
+<!--  <div class="bg-info col-xs-4"> -->
+<!--       <div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div>-->
+<!--  </div> -->
+<!--     <div class="bg-primary col-xs-8"> -->
+<!--          <div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div>-->
+<!--     </div>   </div> </div> -->
+
+
+<!-- As a heading -->
+<nav class="navbar navbar-light bg-light">
+    <span class="navbar-brand mb-0 h1">Navbar place holder and thats it</span>
+</nav>
+
+
+<div class="container">
+    <div class="container-body">
+        <body>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12" style="background-color:#E6E6E6;">
+                    <h2 class="anton"> codeup design</h2>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12" style="background-color:#E6E6E6;">
-            <h1 class="anton"> Visual Design & Web Development</h1>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12" style="background-color:#E6E6E6;">
+                    <h1 class="anton"> Visual Design & Web Development</h1>
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-12" style="background-color:#E6E6E6;">
-            <h3>FROM PARK CITY,UTAH</h3>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12" style="background-color:#E6E6E6;">
+                    <h3>FROM PARK CITY,UTAH</h3>
+
+                    <div class="row d-flex justify-content-center">
+                        <div>
+                            <button type="button" class="circle color-red anton text-white px btn">Design</button>
+                        </div>
+                        <div>
+                            <button type="button" class="circle color-orange anton text-white btn">Develop</button>
+                        </div>
+
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <div>
+                            <button type="button" class="circle color-green anton text-white btn">Support</button>
+                        </div>
+                        <div>
+                            <button type="button" class="circle color-blue anton text-white btn">Host</button>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-4 mx-auto text-center">
+                            <img src="img/images/apple-ipad.jpg" class="center-block">
+                        </div>
+                    </div>
+
+
+
+<!--                    <img class="float-center" src="">-->
+        </body>
+
+
+
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-
-
-<div class="button-container">
-       <div class="row row-cols-2"> 
-           <div class="col"><button type="button" class="circle color-red anton text-white px btn">Design</button></div>
-                <div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div>
-                <div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div>
-                <div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div>
-          </div>
-</div>
-
-
-<img src="img/images/apple-ipad.jpg">
-</body>
 
 
 
 
+<!--        <div class="button-container">-->
+<!--            <div class="row row-cols-2">-->
+<!--                <div class="col">-->
+<!--                    <button type="button" class="circle color-red anton text-white px btn">Design</button>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <button type="button" class="circle color-orange anton text-white btn">Develop</button>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <button type="button" class="circle color-green anton text-white btn">Support</button>-->
+<!--                </div>-->
+<!--                <div class="col">-->
+<!--                    <button type="button" class="circle color-blue anton text-white btn">Host</button>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+
+<!--        <div class="row d-flex justify-content-center">-->
+<!--            <div>-->
+<!--                <button type="button" class="circle color-red anton text-white px btn">Design</button>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <button type="button" class="circle color-orange anton text-white btn">Develop</button>-->
+<!--            </div>-->
 
 
 
 
 
+<!--            <div class="row"> -->
+<!--                <div class="C-1"> 			<div class="col"><button type="button"-->
+<!--                                                                      class="circle color-red anton text-white px btn">Design</button></div> -->
+<!--                </div> 		<div class="C-2"> 			<div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div> 		</div> -->
+<!--                <div class="C-3"> 			<div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div> 		</div> -->
+<!--                <div class="C-4"> 			<div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div> 		</div> 		 	</div>-->
 
-<!--<img src="img/images/macbook.jpg">-->
-<!--<img src="img/images/logo.png">-->
-<!--<img src="img/images/head.jpg">-->
-<!--<img src="img/images/security.jpg">-->
-<!--<img src="img/images/mobile-phone.jpg">-->
-<!--<img src="img/images/man.jpg">-->
 
+
+            <!--            <div class="col">-->
+<!--                <button type="button" class="circle color-green anton text-white btn">Support</button>-->
+<!--            </div>-->
+<!--            <div class="col">-->
+<!--                <button type="button" class="circle color-blue anton text-white btn">Host</button>-->
+<!--            </div>-->
+
+
+<!--        <img src="img/images/apple-ipad.jpg">-->
+<!--        </body>-->
+
+
+        <!--<img src="img/images/macbook.jpg">-->
+        <!--<img src="img/images/logo.png">-->
+        <!--<img src="img/images/head.jpg">-->
+        <!--<img src="img/images/security.jpg">-->
+        <!--<img src="img/images/mobile-phone.jpg">-->
+        <!--<img src="img/images/man.jpg">-->
 
 
     </div>
 </html>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+        crossorigin="anonymous"></script>
