--- a/codeup-design-project.html
+++ b/codeup-design-project.html
@@ -97,11 +97,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-4 mx-auto text-center">
-                            <img src="img/images/apple-ipad.jpg" class="center-block">
-                        </div>
-                    </div>
+                    <div class="d-flex justify-content-around align-self-end apple-image "><img src="img/images/apple-ipad.jpg" class="d-flex "></div>
 
 
 
