--- a/codeup-design-project.html
+++ b/codeup-design-project.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <title> Codeup Design Project </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -13,44 +13,8 @@
 </head>
 
 
-
-
-
-<!--<div class="container"> -->
-<!-- <div class="row">-->
-<!--     <div class="button-container">-->
-
-<!--         <div class="row row-cols-2">-->
-<!--             <div class="col"><button type="button" class="circle color-red anton text-white px btn">Design</button></div>-->
-<!--             <div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div>-->
-<!--             <div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div>-->
-<!--             <div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div>-->
-<!--         </div>-->
-<!--     </div>-->
-
-
-<!--         <div class="container">-->
-<!--             <div class="row">-->
-<!--                 <div class="button-container">-->
-
-<!--  <div class="bg-info col-xs-4"> -->
-<!--       <div class="col"><button type="button" class="circle color-red anton text-white px btn">Design</button></div>-->
-<!--  </div> -->
-<!--     <div class="bg-primary col-xs-8"> -->
-<!--        <div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div>-->
-<!--     </div>   </div> </div> -->
-
-<!--<div class="container"> -->
-<!-- <div class="row"> -->
-<!--  <div class="bg-info col-xs-4"> -->
-<!--       <div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div>-->
-<!--  </div> -->
-<!--     <div class="bg-primary col-xs-8"> -->
-<!--          <div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div>-->
-<!--     </div>   </div> </div> -->
-
-
 <!-- As a heading -->
+<body>
 <nav class="navbar navbar-light bg-light">
     <span class="navbar-brand mb-0 h1">Navbar place holder and thats it</span>
 </nav>
@@ -58,11 +22,11 @@
 
 <div class="container">
     <div class="container-body">
-        <body>
+
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12" style="background-color:#E6E6E6;">
-                    <h2 class="anton"> codeup design</h2>
+                    <h2 class="anton xs-head"> codeup design</h2>
                 </div>
             </div>
         </div>
@@ -70,7 +34,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12" style="background-color:#E6E6E6;">
-                    <h1 class="anton"> Visual Design & Web Development</h1>
+                    <h1 class="anton xs head"> Visual Design & Web Development</h1>
                 </div>
             </div>
         </div>
@@ -97,81 +61,45 @@
                         </div>
                     </div>
 
-                    <div class="d-flex justify-content-around align-self-end apple-image "><img src="img/images/apple-ipad.jpg" class="d-flex "></div>
+                    <div class=selected-work d-flex align-self-end>Selected Work</div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="project-card">
+                                <div class="d-flex justify-content-around align-self-end apple-image "><img
+                                        src="img/images/apple-ipad.jpg" class="d-flex img-fluid "></div>
+                                <p class="flex-grow-1">Featured Project</p>
+                                <!--                                </div>-->
+                                <div class="sbuttons d-flex anton;">
+                                    <p class="sbuttonred anton text-black d-flex">D</p>
+
+                                    <p class="sbuttonorange anton text-black d-flex ">D</p>
+
+                                    <p class=" sbuttongreen  anton text-black d-flex ">S</p>
+
+                                    <p class="sbuttonblue anton text-black d-flex ">H</p>
+                                </div>
+                            </div>
 
 
-
-<!--                    <img class="float-center" src="">-->
-        </body>
-
-
-
+                        </div>
+                    </div>
                 </div>
+
             </div>
         </div>
-
-
-
-
-<!--        <div class="button-container">-->
-<!--            <div class="row row-cols-2">-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-red anton text-white px btn">Design</button>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-orange anton text-white btn">Develop</button>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-green anton text-white btn">Support</button>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-blue anton text-white btn">Host</button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--&lt;!&ndash;        </div>&ndash;&gt;-->
-
-<!--        <div class="row d-flex justify-content-center">-->
-<!--            <div>-->
-<!--                <button type="button" class="circle color-red anton text-white px btn">Design</button>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <button type="button" class="circle color-orange anton text-white btn">Develop</button>-->
-<!--            </div>-->
-
-
-
-
-
-<!--            <div class="row"> -->
-<!--                <div class="C-1"> 			<div class="col"><button type="button"-->
-<!--                                                                      class="circle color-red anton text-white px btn">Design</button></div> -->
-<!--                </div> 		<div class="C-2"> 			<div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div> 		</div> -->
-<!--                <div class="C-3"> 			<div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div> 		</div> -->
-<!--                <div class="C-4"> 			<div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div> 		</div> 		 	</div>-->
-
-
-
-            <!--            <div class="col">-->
-<!--                <button type="button" class="circle color-green anton text-white btn">Support</button>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <button type="button" class="circle color-blue anton text-white btn">Host</button>-->
-<!--            </div>-->
-
-
-<!--        <img src="img/images/apple-ipad.jpg">-->
-<!--        </body>-->
-
-
-        <!--<img src="img/images/macbook.jpg">-->
-        <!--<img src="img/images/logo.png">-->
-        <!--<img src="img/images/head.jpg">-->
-        <!--<img src="img/images/security.jpg">-->
-        <!--<img src="img/images/mobile-phone.jpg">-->
-        <!--<img src="img/images/man.jpg">-->
-
-
     </div>
+    <!--                                <div class="featured flex-grow-1">-->
+</div>
+</body>
+
+
+<!--<img src="img/images/macbook.jpg">-->
+<!--<img src="img/images/logo.png">-->
+<!--<img src="img/images/head.jpg">-->
+<!--<img src="img/images/security.jpg">-->
+<!--<img src="img/images/mobile-phone.jpg">-->
+<!--<img src="img/images/man.jpg">-->
+
 </html>
 
 
