--- a/codeup-design-project.html
+++ b/codeup-design-project.html
@@ -11,84 +11,54 @@
     <link rel="stylesheet" href="codeup-design-project.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
 </head>
-
-
-
-
-
-<!--<div class="container"> -->
-<!-- <div class="row">-->
-<!--     <div class="button-container">-->
+<body>
 
 <!--         <div class="row row-cols-2">-->
 <!--             <div class="col"><button type="button" class="circle color-red anton text-white px btn">Design</button></div>-->
 <!--             <div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div>-->
 <!--             <div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div>-->
 <!--             <div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div>-->
-<!--         </div>-->
-<!--     </div>-->
-
-
-<!--         <div class="container">-->
-<!--             <div class="row">-->
-<!--                 <div class="button-container">-->
-
-<!--  <div class="bg-info col-xs-4"> -->
-<!--       <div class="col"><button type="button" class="circle color-red anton text-white px btn">Design</button></div>-->
-<!--  </div> -->
-<!--     <div class="bg-primary col-xs-8"> -->
-<!--        <div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div>-->
-<!--     </div>   </div> </div> -->
-
-<!--<div class="container"> -->
-<!-- <div class="row"> -->
-<!--  <div class="bg-info col-xs-4"> -->
-<!--       <div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div>-->
-<!--  </div> -->
-<!--     <div class="bg-primary col-xs-8"> -->
-<!--          <div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div>-->
-<!--     </div>   </div> </div> -->
 
 
 <!-- As a heading -->
-<nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Navbar place holder and thats it</span>
-</nav>
+
+
 
 
 <div class="container">
-    <div class="container-body">
-        <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-12" style="background-color:#E6E6E6;">
-                    <h2 class="anton"> codeup design</h2>
+    <div class="container-body border-danger">
+
+        <div class="container-fluid border-danger">
+            <div class="row border-danger">
+                <div class="col-sm-12" >
+                    <img class="centerlogo ¬logo border border-danger" src="img/images/logo.png">
+                    <h2 class="abel border border-danger"> codeup design</h2>
                 </div>
             </div>
         </div>
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-12" style="background-color:#E6E6E6;">
+        <div class="container-fluid border border-danger">
+            <div class="row border-danger">
+                <div class="col-sm-12">
                     <h1 class="anton"> Visual Design & Web Development</h1>
                 </div>
             </div>
         </div>
-        <div class="container-fluid">
+        <div class="container-fluid border border-danger">
             <div class="row">
-                <div class="col-sm-12" style="background-color:#E6E6E6;">
+                <div class="col-sm-12 m-12 lg-1">
                     <h3>FROM PARK CITY,UTAH</h3>
 
-                    <div class="row d-flex justify-content-center">
+                    <div class="row display-flex justify-content-center border border-danger">
                         <div>
-                            <button type="button" class="circle color-red anton text-white px btn">Design</button>
+                            <button type="button" class="circle color-red anton text-white px btn col-sm-12">Design</button>
                         </div>
                         <div>
                             <button type="button" class="circle color-orange anton text-white btn">Develop</button>
                         </div>
 
                     </div>
-                    <div class="row d-flex justify-content-center">
+                    <div class="row d-flex justify-content-center border border-danger">
                         <div>
                             <button type="button" class="circle color-green anton text-white btn">Support</button>
                         </div>
@@ -97,12 +67,72 @@
                         </div>
                     </div>
 
-                    <div class="row">
-                        <div class="col-4 mx-auto text-center">
-                            <img src="img/images/apple-ipad.jpg" class="center-block">
+                    <div class="row border border-danger">
+                        <div class="col-sm-4 col-md-6 mx-auto text-center">
+
+                            <img src="img/images/apple-ipad.jpg" class="w-100" alt="apple ipad">
+
+                            <div class="lower-container row mt-1">
+                                <h4 class="lead col-7 mt-1">FEATURED PROJECT</h4>
+                                <div class="icons col-5">
+                                    <ul class="row 1">
+                                        <div class="letterCircle bg-danger">A</div>
+                                        <div class="letterCircle">b</div>
+                                        <div class="letterCircle">c</div>
+                                        <div class="letterCircle">d</div>
+                                    </ul>
+                                </div>
+                            </div>
+<!--    hide these imagies while small -->
+<!--                            for medium device, show an evenly spaced 4 section grid for 4 images-->
+<!--in a large grid, the 4 images take up 8/12ths of the left side, and the new 3 images are small in a col on the right-->
+
+
+
+                           <div class="container row border border-danger">
+                               <div class="row d-flex justify content center border border-danger">
+
+
+                           <div></div></dive> <img src="img/images/macbook.jpg">
+                                   <div>   <img src="img/images/head.jpg"></div>
+                                   <div>  <img src="img/images/security.jpg"></div>
+                                   <div>  <img src="img/images/mobile-phone.jpg"></div>
+                                   <div>  <img src="img/images/man.jpg"></div>
+                        </div>
                         </div>
                     </div>
 
+
+
+<!--                    <div class=selected-work d-flex align-self-end>Selected Work</div>-->
+<!--                    <div class="row">-->
+<!--                        <div class="col">-->
+<!--                            <div class="project-card">-->
+<!--                                <div class="d-flex justify-content-around align-self-end apple-image "><img-->
+<!--                                        src="img/images/apple-ipad.jpg" class="d-flex img-fluid "></div>-->
+<!--                                <p class="flex-grow-1">Featured Project</p>-->
+<!--                                &lt;!&ndash;                                </div>&ndash;&gt;-->
+<!--                                <div class="sbuttons d-flex anton;">-->
+<!--                                    <p class="sbuttonred anton text-black d-flex">D</p>-->
+
+<!--                                    <p class="sbuttonorange anton text-black d-flex ">D</p>-->
+
+<!--                                    <p class=" sbuttongreen  anton text-black d-flex ">S</p>-->
+
+<!--                                    <p class="sbuttonblue anton text-black d-flex ">H</p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+
+
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!--                                <div class="featured flex-grow-1">-->
+</div>
 
 
 <!--                    <img class="float-center" src="">-->
@@ -166,13 +196,13 @@
 <!--        <img src="img/images/apple-ipad.jpg">-->
 <!--        </body>-->
 
-
-        <!--<img src="img/images/macbook.jpg">-->
-        <!--<img src="img/images/logo.png">-->
-        <!--<img src="img/images/head.jpg">-->
-        <!--<img src="img/images/security.jpg">-->
-        <!--<img src="img/images/mobile-phone.jpg">-->
-        <!--<img src="img/images/man.jpg">-->
+<!--<div class="container">-->
+<!--        <img src="img/images/macbook.jpg">-->
+<!--        <img src="img/images/head.jpg">-->
+<!--        <img src="img/images/security.jpg">-->
+<!--        <img src="img/images/mobile-phone.jpg">-->
+<!--        <img src="img/images/man.jpg">-->
+<!--</div>-->
 
 
     </div>
