--- a/codeup-design-project.html
+++ b/codeup-design-project.html
@@ -10,6 +10,7 @@
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="codeup-design-project.css">
     <link href="https://fonts.googleapis.com/css2?family=Abel&family=Anton&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
 </head>
 <body>
 
@@ -23,179 +24,142 @@
 <!-- As a heading -->
 
 
+<!--<div class="container">-->
+<!--    <div class="container-body border-danger">-->
 
+<div class="row my-row justify-content-center">
+    <div class="row border-danger">
+        <div class="col-sm-12 xl-1 d-flex">
+            <img class="centerlogo order-md-0 ¬logo" src="img/images/logo.png">
 
-<div class="container">
-    <div class="container-body border-danger">
-
-        <div class="container-fluid border-danger">
-            <div class="row border-danger">
-                <div class="col-sm-12" >
-                    <img class="centerlogo ¬logo border border-danger" src="img/images/logo.png">
-                    <h2 class="abel border border-danger"> codeup design</h2>
-                </div>
-            </div>
-        </div>
-
-        <div class="container-fluid border border-danger">
-            <div class="row border-danger">
-                <div class="col-sm-12">
-                    <h1 class="anton"> Visual Design & Web Development</h1>
-                </div>
-            </div>
-        </div>
-        <div class="container-fluid border border-danger">
-            <div class="row">
-                <div class="col-sm-12 m-12 lg-1">
-                    <h3>FROM PARK CITY,UTAH</h3>
-
-                    <div class="row display-flex justify-content-center border border-danger">
-                        <div>
-                            <button type="button" class="circle color-red anton text-white px btn col-sm-12">Design</button>
-                        </div>
-                        <div>
-                            <button type="button" class="circle color-orange anton text-white btn">Develop</button>
-                        </div>
-
-                    </div>
-                    <div class="row d-flex justify-content-center border border-danger">
-                        <div>
-                            <button type="button" class="circle color-green anton text-white btn">Support</button>
-                        </div>
-                        <div>
-                            <button type="button" class="circle color-blue anton text-white btn">Host</button>
-                        </div>
-                    </div>
-
-                    <div class="row border border-danger">
-                        <div class="col-sm-4 col-md-6 mx-auto text-center">
-
-                            <img src="img/images/apple-ipad.jpg" class="w-100" alt="apple ipad">
-
-                            <div class="lower-container row mt-1">
-                                <h4 class="lead col-7 mt-1">FEATURED PROJECT</h4>
-                                <div class="icons col-5">
-                                    <ul class="row 1">
-                                        <div class="letterCircle bg-danger">A</div>
-                                        <div class="letterCircle">b</div>
-                                        <div class="letterCircle">c</div>
-                                        <div class="letterCircle">d</div>
-                                    </ul>
-                                </div>
-                            </div>
-<!--    hide these imagies while small -->
-<!--                            for medium device, show an evenly spaced 4 section grid for 4 images-->
-<!--in a large grid, the 4 images take up 8/12ths of the left side, and the new 3 images are small in a col on the right-->
-
-
-
-                           <div class="container row border border-danger">
-                               <div class="row d-flex justify content center border border-danger">
-
-
-                           <div></div></dive> <img src="img/images/macbook.jpg">
-                                   <div>   <img src="img/images/head.jpg"></div>
-                                   <div>  <img src="img/images/security.jpg"></div>
-                                   <div>  <img src="img/images/mobile-phone.jpg"></div>
-                                   <div>  <img src="img/images/man.jpg"></div>
-                        </div>
-                        </div>
-                    </div>
-
-
-
-<!--                    <div class=selected-work d-flex align-self-end>Selected Work</div>-->
-<!--                    <div class="row">-->
-<!--                        <div class="col">-->
-<!--                            <div class="project-card">-->
-<!--                                <div class="d-flex justify-content-around align-self-end apple-image "><img-->
-<!--                                        src="img/images/apple-ipad.jpg" class="d-flex img-fluid "></div>-->
-<!--                                <p class="flex-grow-1">Featured Project</p>-->
-<!--                                &lt;!&ndash;                                </div>&ndash;&gt;-->
-<!--                                <div class="sbuttons d-flex anton;">-->
-<!--                                    <p class="sbuttonred anton text-black d-flex">D</p>-->
-
-<!--                                    <p class="sbuttonorange anton text-black d-flex ">D</p>-->
-
-<!--                                    <p class=" sbuttongreen  anton text-black d-flex ">S</p>-->
-
-<!--                                    <p class="sbuttonblue anton text-black d-flex ">H</p>-->
-<!--                                </div>-->
-<!--                            </div>-->
-
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+            <h2 class="abel"> codeup design</h2>
         </div>
     </div>
-    <!--                                <div class="featured flex-grow-1">-->
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12">
+            <h1 class="anton"> Visual Design & Web Development</h1>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 m-12 lg-1">
+            <h3 class="row justify-content-center">FROM PARK CITY,UTAH</h3>
+
+            <div class="row justify-content-center">
+                <div class="col-auto ">
+                    <button type="button" class="circle color-red anton text-white px btn col-sm-12">Design
+                    </button>
+                </div>
+                <div class="col-auto ">
+                    <button type="button" class="circle color-orange anton text-white btn">Develop</button>
+                </div>
+                <div class="w-100 d-sm-none"></div>
+                <div class="col-auto ">
+                    <button type="button" class="circle color-green anton text-white btn">Support</button>
+                </div>
+                <div class="col-auto ">
+                    <button type="button" class="circle color-blue anton text-white btn">Host</button>
+                </div>
+            </div>
+
+
+
+            <!--                            <div class="container row border border-danger">-->
+            <div class="row d-flex justify-content-center">
+
+                <!--left hand content-->
+                <div class="col">
+                    <div class="row row-cols-1 row-cols-sm-2">
+                        <!--                                            <img src="img/images/macbook.jpg">-->
+                        <div class="col project-card">
+                            <img src="img/images/macbook.jpg">
+                            <div class="d-flex align-items-center p-1">
+                                <p class="flex-grow-1 my-0">FEATURED PROJECT</p>
+                                <p class="badge color-red">D</p>
+                                <p class="badge color-orange">D</p>
+                                <p class="badge color-green">S</p>
+                                <p class="badge color-blue">H</p></div>
+                        </div>
+                        <div class="col project-card">
+                            <img src="img/images/security.jpg">
+                            <div class="d-flex align-items-center p-1">
+                                <p class="flex-grow-1 my-0">FEATURED PROJECT</p>
+                                <p class="badge color-red">D</p>
+                                <p class="badge color-orange">D</p>
+                                <p class="badge color-green">S</p>
+                                <p class="badge color-blue">H</p></div>
+                        </div>
+                        <div class="col project-card">
+                            <img src="img/images/apple-ipad.jpg">
+                            <div class="d-flex align-items-center p-1">
+                                <p class="flex-grow-1 my-0">FEATURED PROJECT</p>
+                                <p class="badge color-red">D</p>
+                                <p class="badge color-orange">D</p>
+                                <p class="badge color-green">S</p>
+                                <p class="badge color-blue">H</p></div>
+                        </div>
+                        <div class="col project-card">
+                            <img src="img/images/man.jpg">
+                            <div class="d-flex align-items-center p-1">
+                                <p class="flex-grow-1 my-0">FEATURED PROJECT</p>
+                                <p class="badge color-red">D</p>
+                                <p class="badge color-orange">D</p>
+                                <p class="badge color-green">S</p>
+                                <p class="badge color-blue">H</p></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 d-none d-lg-block">
+                    <div class="d-flex mb-3"><img class="content-img mr-3" src="img/images/mobile-phone.jpg" alt="">
+                        <h3 class="text-uppercase">The Admin Bar and Absolute positioning</h3>
+                    </div>
+                    <div class="d-flex mb-3"><img class="content-img mr-3" src="img/images/head.jpg" alt="">
+                        <h3 class="text-uppercase">Nibbler Awesome Website Testing</h3>
+                    </div>
+                    <div class="d-flex mb-3"><img class="content-img mr-3" src="img/images/google-search.jpg" alt="">
+                        <h3 class="text-uppercase">HOW TO GET GOOGLE TO LIKE YOU</h3>
+
+
+                    </div>
+                    <div class="">
+                        <div class="d-flex align-items-center"><i class="fab fa-twitter"></i>
+                            <h2> last tweet</h2></div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Amet iste laboriosam mollitia, natus quo sequi voluptas. Ad assumenda
+                            blanditiis debitis, labore nemo officia perspiciatis rerum soluta suscipit tenetur.
+                            Excepturi, quisquam!
+                        </p>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        <!--                        </div>-->
+
+
+
+    </div>
+</div>
+<!--            </div>-->
+
+<!--        </div>-->
+</div>
+</div>
+<!--                                <div class="featured flex-grow-1">-->
 </div>
 
 
 <!--                    <img class="float-center" src="">-->
-        </body>
+</body>
 
 
-
-                </div>
-            </div>
-        </div>
-
-
-
-
-<!--        <div class="button-container">-->
-<!--            <div class="row row-cols-2">-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-red anton text-white px btn">Design</button>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-orange anton text-white btn">Develop</button>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-green anton text-white btn">Support</button>-->
-<!--                </div>-->
-<!--                <div class="col">-->
-<!--                    <button type="button" class="circle color-blue anton text-white btn">Host</button>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--&lt;!&ndash;        </div>&ndash;&gt;-->
-
-<!--        <div class="row d-flex justify-content-center">-->
-<!--            <div>-->
-<!--                <button type="button" class="circle color-red anton text-white px btn">Design</button>-->
-<!--            </div>-->
-<!--            <div>-->
-<!--                <button type="button" class="circle color-orange anton text-white btn">Develop</button>-->
-<!--            </div>-->
-
-
-
-
-
-<!--            <div class="row"> -->
-<!--                <div class="C-1"> 			<div class="col"><button type="button"-->
-<!--                                                                      class="circle color-red anton text-white px btn">Design</button></div> -->
-<!--                </div> 		<div class="C-2"> 			<div class="col"><button type="button" class="circle color-orange anton text-white btn">Develop</button></div> 		</div> -->
-<!--                <div class="C-3"> 			<div class="col"><button type="button" class="circle color-green anton text-white btn">Support</button></div> 		</div> -->
-<!--                <div class="C-4"> 			<div class="col"><button type="button" class="circle color-blue anton text-white btn">Host</button></div> 		</div> 		 	</div>-->
-
-
-
-            <!--            <div class="col">-->
-<!--                <button type="button" class="circle color-green anton text-white btn">Support</button>-->
-<!--            </div>-->
-<!--            <div class="col">-->
-<!--                <button type="button" class="circle color-blue anton text-white btn">Host</button>-->
-<!--            </div>-->
-
-
-<!--        <img src="img/images/apple-ipad.jpg">-->
-<!--        </body>-->
-
+</div>
+<!--</div>-->
 <!--<div class="container">-->
 <!--        <img src="img/images/macbook.jpg">-->
 <!--        <img src="img/images/head.jpg">-->
@@ -205,7 +169,7 @@
 <!--</div>-->
 
 
-    </div>
+</div>
 </html>
 
 
